# dOCRead

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/docread/: server.py
src/docread/engines/: __init__.py  base.py  cloud_engine.py  local_engine.py  local_ocr.py
src/docread/static/: app.css  app.js  index.html
src/vision_lens/: config.py  server.py
src/vision_lens/engines/: local_engine.py
src/vision_lens/static/: index.html
